Views, Functionalities and various
-Project structure defined (packages)
-Added EventB generated classes to package EventB
-Chatlist activity ready and servers as template for other activities which also implement listviews
-Added icons for actions
-Commented some eventB code that doesn't work properly

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,16 +10,17 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         <activity
-            android:name=".ChatListActivity">
+            android:name=".AppActivities.ChatListActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".UsersListActivity" />
-        <activity android:name=".ChatRoomActivity" />
-        <activity android:name=".OptionPaneActivity"/>
+        <activity android:name=".AppActivities.UsersListActivity" />
+        <activity android:name=".AppActivities.ChatRoomActivity" />
+        <activity android:name=".AppActivities.OptionPaneActivity"
+            android:theme="@style/Base.ThemeOverlay.AppCompat.Dialog"/>
     </application>
 
 </manifest>
