Template for listviews and dialogs
-Chats and Users listviews are now fully working (with placeholder data)
-When click on a chat, a dialog will pop up with options to apply to given chat.
-Broadcast activity created but there's no design yet.
-Various fixes in models and adapters.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,7 @@
         android:roundIcon="@mipmap/images"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity
-            android:name=".AppActivities.ChatListActivity">
+        <activity android:name=".AppActivities.ChatListActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -19,8 +18,10 @@
         </activity>
         <activity android:name=".AppActivities.UsersListActivity" />
         <activity android:name=".AppActivities.ChatRoomActivity" />
-        <activity android:name=".AppActivities.OptionPaneActivity"
-            android:theme="@style/Base.ThemeOverlay.AppCompat.Dialog"/>
+        <activity
+            android:name=".AppActivities.OptionPaneActivity"
+            android:theme="@style/Theme.AppCompat.Dialog.Alert" />
+        <activity android:name=".AppActivities.BroadcastActivity"></activity>
     </application>
 
 </manifest>
