Login, Register, Styles, Chatroom and more!
24H work commit!
-Login and register view implemented
-Single and group chats added
-Add user Functionality
-Chatroom created
-Firebase incorporation in many functionalities

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,19 +9,22 @@
         android:roundIcon="@mipmap/images"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name=".AppActivities.ChatListActivity">
+        <activity android:name=".AppActivities.ChatListActivity"></activity>
+        <activity android:name=".AppActivities.UsersListActivity" />
+        <activity android:name=".AppActivities.ChatRoomActivity" />
+        <activity
+            android:name=".AppActivities.OptionPaneActivity"
+            android:theme="@style/Theme.AppCompat.Dialog.Alert" />
+        <activity android:name=".AppActivities.BroadcastActivity" />
+        <activity android:name=".AppActivities.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".AppActivities.UsersListActivity" />
-        <activity android:name=".AppActivities.ChatRoomActivity"/>
-        <activity
-            android:name=".AppActivities.OptionPaneActivity"
+        <activity android:name=".AppActivities.AddContactActivity"
             android:theme="@style/Theme.AppCompat.Dialog.Alert" />
-        <activity android:name=".AppActivities.BroadcastActivity" />
     </application>
 
 </manifest>
